# word2html

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  convert.py  pyproject.toml  requirements.txt  setup.py
word2html/: __init__.py  main.py
